Tried to fix spacing issues for team, moving on.

--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ a:hover {
 .container {
   width: 100%;
   min-width: 280px;
-  margin: 2em -1em ;
-  padding: 2em;
+  margin: 2em 0 ;
+  padding: 2em 0;
   border-bottom: solid 1px gray;
 }
 
@@ -133,7 +133,7 @@ a:hover {
 
 #team ul span {
   margin: -3rem;
-  padding: 1.5rem;
+  padding: 1.5rem 0;
   display: block;
   text-align: center;
 }
@@ -143,7 +143,7 @@ a:hover {
   border: solid .05rem lightgray;
   padding: .3rem;
   align-self: center;
-  margin: 2rem;
+  margin: 2rem 4rem;
   -webkit-filter: grayscale(1);
   filter: gray;
 }
